# celery-farm

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/django_app/: celery_app.py  settings.py  urls.py
examples/fastapi_app/: app.py
examples/flask_app/: app.py
src/celery_farm/: __init__.py  _compat.py  beat.py  introspect.py  invoke.py  models.py  openapi.py  schemas.py
src/celery_farm/integrations/: __init__.py  django.py  fastapi.py  flask.py
tests/: test_django.py  test_fastapi.py  test_flask.py  test_typeddict_compat.py
